sfdc-ac-transition-pkg/force-app/main/default/objects/SFDC_Industry_Assessment_Answer__mdt/SFDC_Industry_Assessment_Answer__mdt.object-meta.xml
<CustomObject>
    <description>Contains options for answers within a particular question of an Assessment.</description>
    <label>SFDC Industry Assessment Answer</label>
    <pluralLabel>SFDC Industry Assessment Answers</pluralLabel>
</CustomObject>