sfdc-ac-transition-pkg/force-app/main/default/objects/SFDC_Industry_Assessment_Answer__mdt/fields/Bottom_Help_Text_Label__c.field-meta.xml
<CustomField>
    <fullName>Bottom_Help_Text_Label__c</fullName>
    <description>If present, displays the label specified following the mapping selections</description>
    <inlineHelpText>If present, displays the label specified following the mapping selections</inlineHelpText>
    <label>Bottom Help Text Label</label>
    <length>80</length>
    <type>Text</type>
</CustomField>