sfdc-ac-transition-pkg/force-app/main/default/objects/SFDC_Industry_Assessment_Answer__mdt/fields/Follow_Up_To__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_To__c</fullName>
    <description>The id of the Answer that this Answer should be a follow up to.</description>
    <label>Follow-Up To</label>
    <length>18</length>
    <type>Text</type>
</CustomField>