sfdc-ac-transition-pkg/force-app/main/default/objects/SFDC_Industry_Assessment_Answer__mdt/fields/Help_Text_Label__c.field-meta.xml
<CustomField>
    <fullName>Help_Text_Label__c</fullName>
    <label>Help Text Label</label>
    <length>80</length>
    <type>Text</type>
</CustomField>