sfdc-ac-transition-pkg/force-app/main/default/objects/SFDC_Industry_Assessment_Answer__mdt/fields/Index__c.field-meta.xml
<CustomField>
    <fullName>Index__c</fullName>
    <description>Order in which this item should display</description>
    <label>Index</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>