sfdc-ac-transition-pkg/force-app/main/default/objects/SFDC_Industry_Assessment_Answer__mdt/fields/Mapped_Objects__c.field-meta.xml
<CustomField>
    <fullName>Mapped_Objects__c</fullName>
    <description>Semicolon separated list of API Names of objects to show in mapping (in order)</description>
    <label>Mapped Objects</label>
    <type>TextArea</type>
</CustomField>