sfdc-ac-transition-pkg/force-app/main/default/objects/SFDC_Industry_Assessment_Answer__mdt/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <label>Question</label>
    <referenceTo>SFDC_Industry_Assessment_Question__mdt</referenceTo>
    <relationshipLabel>SFDC Industry Assessment Answers</relationshipLabel>
    <relationshipName>SFDC_Industry_Assessment_Answers</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>