sfdc-ac-transition-pkg/force-app/main/default/objects/SFDC_Industry_Assessment_Answer__mdt/fields/Question_Label__c.field-meta.xml
<CustomField>
    <fullName>Question_Label__c</fullName>
    <label>Question Label</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>