sfdc-ac-transition-pkg/force-app/main/default/objects/SFDC_Industry_Assessment_Answer__mdt/fields/Required_Vertical__c.field-meta.xml
<CustomField>
    <fullName>Required_Vertical__c</fullName>
    <description>If populated, only displays this answer if the provided vertical is selected during the assessment.</description>
    <label>Required Vertical</label>
    <referenceTo>SFDC_Industry_Vertical__mdt</referenceTo>
    <relationshipLabel>SFDC Industry Assessment Answers</relationshipLabel>
    <relationshipName>SFDC_Industry_Assessment_Answers</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>