sfdc-ac-transition-pkg/force-app/main/default/objects/SFDC_Industry_Assessment_Answer__mdt/listViews/All_Answers.listView-meta.xml
<ListView>
    <fullName>All_Answers</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Question_Label__c</columns>
    <columns>Required_Vertical__c</columns>
    <columns>Mapped_Objects__c</columns>
    <columns>Question__c</columns>
    <columns>Follow_Up_To__c</columns>
    <columns>Index__c</columns>
    <columns>Help_Text_Label__c</columns>
    <columns>Verbose_Help_Text_Label__c</columns>
    <columns>Bottom_Help_Text_Label__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Answers</label>
    <language>en_US</language>
</ListView>