sfdc-ac-transition-pkg/force-app/main/default/objects/SFDC_Industry_Assessment_Answer__mdt/listViews/Question_2.listView-meta.xml
<ListView>
    <fullName>Question_2</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Question_Label__c</columns>
    <columns>Index__c</columns>
    <columns>Mapped_Objects__c</columns>
    <columns>Required_Vertical__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Question__c</field>
        <operation>equals</operation>
        <value>m075f000000qtNF</value>
    </filters>
    <label>Question 2</label>
    <language>en_US</language>
</ListView>